@@ -118,6 +118,11 @@ flag warn-as-error
   manual:      True
   description: Build with warnings-as-errors
 
+flag hie
+  default:     False
+  manual:      True
+  description: Build with hie flags
+
 -- ----------------------------------------------------------------------
 -- setup
 -- ----------------------------------------------------------------------
@@ -441,7 +446,7 @@ Library
                       unix-compat       >= 0.6 && < 0.8,
                       bytestring        >= 0.10.6 && < 0.13,
                       old-time          >= 1.1.0.3 && < 1.2,
-                      time              >= 1.9 && < 1.14,
+                      time              >= 1.9 && < 1.15,
                       text              >= 1.2.1.3 && < 2.2,
                       directory         >= 1.2.7 && < 1.4,
                       temporary         >= 1.2.1 && < 1.4,
@@ -451,16 +456,25 @@ Library
                       mmap              >= 0.5.9 && < 0.6,
                       zlib              >= 0.6.1.2 && < 0.8,
                       network-uri       >= 2.6 && < 2.8,
-                      network           >= 2.6 && < 3.2,
+                      network           >= 2.6 && < 3.3,
                       conduit           >= 1.3.0 && < 1.4,
                       http-conduit      >= 2.3 && < 2.4,
-                      -- constraining indirect dependency to work around problems
-                      -- connecting to hub.darcs.net - see https://bugs.darcs.net/issue2715
-                      tls               < 2.0.0,
                       http-types        >= 0.12.1 && < 0.12.5,
                       exceptions        >= 0.6 && < 0.11,
                       terminal-size     >= 0.3.4 && < 0.4,
-                      strict-identity   >= 0.1 && < 0.2,
+                      strict-identity   >= 0.1 && < 0.2
+
+    if impl(ghc >= 8.8)
+      cpp-options:    -DHAVE_CRYPTON_CONNECTION
+      build-depends:  crypton-connection >= 0.4 && < 0.5,
+                      data-default-class,
+                      http-client-tls   >= 0.3.5 && < 0.4,
+                      tls               >= 2.0.0 && < 2.1
+    else
+      -- cannot use crypton-connection >= 0.3.3, so
+      -- constraining indirect dependency to work around problems
+      -- connecting to hub.darcs.net - see https://bugs.darcs.net/issue2715
+      build-depends:  tls               < 2.0.0
 
     if flag(warn-as-error)
       ghc-options:    -Werror
@@ -477,6 +491,9 @@ Library
     if flag(terminfo) && !os(windows)
       build-depends:  terminfo >= 0.4.0.2 && < 0.5
       cpp-options:    -DHAVE_TERMINFO
+
+    if flag(hie)
+      ghc-options:    -fwrite-ide-info -hiedir=.hie
 
     default-extensions:
         BangPatterns
@@ -577,7 +594,7 @@ test-suite darcs-test
                     text,
                     directory,
                     FindBin      >= 0.0.5 && < 0.1,
-                    QuickCheck   >= 2.13 && < 2.15,
+                    QuickCheck   >= 2.13 && < 2.16,
                     quickcheck-instances       >= 0.3.29.1 && < 0.4,
                     leancheck    >= 0.9 && < 1.1,
                     HUnit        >= 1.3 && < 1.7,
