@@ -1,1 +1,1 @@
-Just "\nContext:\n\n\n[resolve issue2714: cannot remove recursively\nBen Franksen <ben.franksen@online.de>**20240506183723\n Ignore-this: fcab2e01d6fe9dc16facda2a569eeb4454c3c1208cdcd31bb9c630334290de1de6dba8d5611666d9\n] \n\n[put back the set-default hint\nGanesh Sittampalam <ganesh@earth.li>**20240309154509\n Ignore-this: 7f52711f8776994dcb902a5d23741d6c6af6f3113c1ec30a2691348235d16cd81689a21eff8d334d\n \n This rolls back patch 8c1131290443248d423cabe0b5566f840e6cb3b3\n] \n\n[Add a --ghcflags/-g option to the test suite\nGanesh Sittampalam <ganesh@earth.li>**20240309145422\n Ignore-this: aba41611871b0ee986beee2e1bd6fb9af6690bf7315737fdb1c166222685ee8be703003d492eb010\n \n This allows arbitrary GHC flags to be passed on to the ghc\n invocations used to build helper exes in various test scripts.\n \n For example this allows -dynamic to be passed on systems with\n shared libraries.\n \n Based on a patch by Vekhir <vekhir@yahoo.com>\n] \n\n[Darcs.UI.External: fix warnings about head\nGanesh Sittampalam <ganesh@earth.li>**20240225215257\n Ignore-this: 35ed1b4cd0f4c1af70133228547dac7fce5067a1482cbe6810c515f82389d70cb1f2bed0a7a32fc9\n] \n\n[Darcs.UI.Commands.ShowAuthors: fix warnings about head\nGanesh Sittampalam <ganesh@earth.li>**20240225215214\n Ignore-this: ee64bb835284ac05403ea170915e8ed2191de27042e69edea61f5743bd752ea14e44082f54d90f9a\n] \n\n[use headErr/tailErr from safe for several head/tails\nGanesh Sittampalam <ganesh@earth.li>**20240225215204\n Ignore-this: bb7a9c0ef437f841d13a7eb2a0a24abcf5ee4d26a2856feac2966a4f89a52a5b20560bea920fbc42\n \n They aren't trivial to fix in a concise way, and safe\n is generally a useful package to have around anyway.\n] \n\n[Darcs.Test.Patch.FileUUIDModel: fix warning about head/tail\nGanesh Sittampalam <ganesh@earth.li>**20240225215135\n Ignore-this: 740956f48bd3127b4f77c0c7350b8d229e0fd7be3bda48932a61341169cc976d6e7ed3dedc7cad11\n] \n\n[Darcs.UI.Commands.Record: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225205552\n Ignore-this: e288796d05da69107f281ccd311e1980cfc7d71aaab72b3c2ab2619c0f1ceaff76a497ae37705689\n] \n\n[Darcs.UI.Commands.Convert.Import: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225205524\n Ignore-this: a8c51b94ff04c6bed7959f43c3d518d6171048755646fd1146a7996ac6d5c5013db900b51ff29504\n] \n\n[Darcs.UI.Commands.Convert.Export: fix warnings about tail\nGanesh Sittampalam <ganesh@earth.li>**20240225204214\n Ignore-this: a49d956016082487081f71fcace360f65cb92ad17e10e195651821d6e009b70b9d01b49a2b0c8708\n] \n\n[add some tests for Darcs.UI.Commands.Convert.Export.patchAuthor\nGanesh Sittampalam <ganesh@earth.li>**20240225204119\n Ignore-this: 4a3a731c86732c64a27b9e9719950e01a94ef320b37259113c693e75080283806a23835c423e40b9\n] \n\n[darcs.hs: fix warnings about head/tail\nGanesh Sittampalam <ganesh@earth.li>**20240225201516\n Ignore-this: 8f6fec34b8e77474a3b1ee5e252fb08fe8439c57a4a0ad35df64c06fe15df18f83c82855d8435e15\n] \n\n[Darcs.Patch.Info: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225195147\n Ignore-this: f50bcf1a170c6c8941c688021e20d1eee24e59b2afe7a5f01488c9c4f2cb92d58aed586f146a0a98\n] \n\n[Darcs.Util.Diff.Patience: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225194009\n Ignore-this: ccfaccc22725d81839f5caf605742eb7f3ef916572fdd7a53bcc7f7fa837ef9d71729e7c71d4503\n] \n\n[Darcs.Patch.Annotate: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225182503\n Ignore-this: 4c48b8aadee71311e2a01f5b53a678e07f53339d98e843ebc01ebd381163fe0a9d7f3721c2c5dc58\n] \n\n[bump version to 2.19.1\nGanesh Sittampalam <ganesh@earth.li>**20240225175930\n Ignore-this: b8e8df00de306f7de2363d1805c152be15cc5b5ab99a57be8f9db19bb8552d0d25a196eeb2dc20c4\n] \n\n[TAG 2.18.1\nGanesh Sittampalam <ganesh@earth.li>**20240225173219\n Ignore-this: dc3a92eafcab9d4fa9f53b1811d4c99d330615a8c202bff1b77f44d551d21684eee81e96c69be62b\n] \n"
+Just "\nContext:\n\n\n[cabal file: add hie flag\nBen Franksen <ben.franksen@online.de>**20240510175237\n Ignore-this: 1d42ad05750e08d23ec0f6a387c08ceb051de31ec48a97826573f14a56e3a0ae16584ed3577f82c0\n] \n\n[ci: upgrade actions/cache, fix cache/save warnings\nBen Franksen <ben.franksen@online.de>**20240510155801\n Ignore-this: 1b2f726a24693810ec0fe995af9a0be968ca86728cc26758ca9582516968397ca1d3b4be1c478a8b\n] \n\n[resolve issue2718: avoid using conflictedPaths to detect whether we have conflicts\nBen Franksen <ben.franksen@online.de>**20240510130208\n Ignore-this: 6aeca7588b2418053dd27039d0f2bcbecbee965e2e8a270f24f89b427fe787f9d811ef1eaf1a61bb\n \n This adds an explicit test named haveConflicts, which looks at the \"sum\" of\n the mangled and unmangled conflicts. This is cleaner because in principle\n (albeit not in practice) there could be conflicts that do not involve any\n file paths. Consequently, the warning message for conflicts is now separate\n from the listing of the affected paths.\n] \n\n[two optimizations in remove command\nBen Franksen <ben.franksen@online.de>**20240510071822\n Ignore-this: b4d3049af67f9824469de5692e6337f5dd0586e921b973632e74c9d180287f8d30460777119bc81f\n \n Frst, avoid duplicate call to readPristineAndPending by passing the pristine\n tree to makeRemovePatch. Also, use a path filter before expanding the tree,\n to avoid expansion of irrelevant parts of the tree.\n] \n\n[ci: remove ghc-8.2.2 from build matrix\nBen Franksen <ben.franksen@online.de>**20240509190406\n Ignore-this: f0a8e2f11701fc743212fda56d6106d5364cefead256b63d06d363e787b409a74318611cf1ce06da\n \n Building the dependencies now fails on macos-13 with ghc-8.2.2. We already\n excluded it for the other systems due to various build problems, so can as\n well remove it entirely.\n] \n\n[resolve issue2714: cannot remove recursively\nBen Franksen <ben.franksen@online.de>**20240506183723\n Ignore-this: fcab2e01d6fe9dc16facda2a569eeb4454c3c1208cdcd31bb9c630334290de1de6dba8d5611666d9\n] \n\n[put back the set-default hint\nGanesh Sittampalam <ganesh@earth.li>**20240309154509\n Ignore-this: 7f52711f8776994dcb902a5d23741d6c6af6f3113c1ec30a2691348235d16cd81689a21eff8d334d\n \n This rolls back patch 8c1131290443248d423cabe0b5566f840e6cb3b3\n] \n\n[Add a --ghcflags/-g option to the test suite\nGanesh Sittampalam <ganesh@earth.li>**20240309145422\n Ignore-this: aba41611871b0ee986beee2e1bd6fb9af6690bf7315737fdb1c166222685ee8be703003d492eb010\n \n This allows arbitrary GHC flags to be passed on to the ghc\n invocations used to build helper exes in various test scripts.\n \n For example this allows -dynamic to be passed on systems with\n shared libraries.\n \n Based on a patch by Vekhir <vekhir@yahoo.com>\n] \n\n[Darcs.UI.External: fix warnings about head\nGanesh Sittampalam <ganesh@earth.li>**20240225215257\n Ignore-this: 35ed1b4cd0f4c1af70133228547dac7fce5067a1482cbe6810c515f82389d70cb1f2bed0a7a32fc9\n] \n\n[Darcs.UI.Commands.ShowAuthors: fix warnings about head\nGanesh Sittampalam <ganesh@earth.li>**20240225215214\n Ignore-this: ee64bb835284ac05403ea170915e8ed2191de27042e69edea61f5743bd752ea14e44082f54d90f9a\n] \n\n[use headErr/tailErr from safe for several head/tails\nGanesh Sittampalam <ganesh@earth.li>**20240225215204\n Ignore-this: bb7a9c0ef437f841d13a7eb2a0a24abcf5ee4d26a2856feac2966a4f89a52a5b20560bea920fbc42\n \n They aren't trivial to fix in a concise way, and safe\n is generally a useful package to have around anyway.\n] \n\n[Darcs.Test.Patch.FileUUIDModel: fix warning about head/tail\nGanesh Sittampalam <ganesh@earth.li>**20240225215135\n Ignore-this: 740956f48bd3127b4f77c0c7350b8d229e0fd7be3bda48932a61341169cc976d6e7ed3dedc7cad11\n] \n\n[Darcs.UI.Commands.Record: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225205552\n Ignore-this: e288796d05da69107f281ccd311e1980cfc7d71aaab72b3c2ab2619c0f1ceaff76a497ae37705689\n] \n\n[Darcs.UI.Commands.Convert.Import: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225205524\n Ignore-this: a8c51b94ff04c6bed7959f43c3d518d6171048755646fd1146a7996ac6d5c5013db900b51ff29504\n] \n\n[Darcs.UI.Commands.Convert.Export: fix warnings about tail\nGanesh Sittampalam <ganesh@earth.li>**20240225204214\n Ignore-this: a49d956016082487081f71fcace360f65cb92ad17e10e195651821d6e009b70b9d01b49a2b0c8708\n] \n\n[add some tests for Darcs.UI.Commands.Convert.Export.patchAuthor\nGanesh Sittampalam <ganesh@earth.li>**20240225204119\n Ignore-this: 4a3a731c86732c64a27b9e9719950e01a94ef320b37259113c693e75080283806a23835c423e40b9\n] \n\n[darcs.hs: fix warnings about head/tail\nGanesh Sittampalam <ganesh@earth.li>**20240225201516\n Ignore-this: 8f6fec34b8e77474a3b1ee5e252fb08fe8439c57a4a0ad35df64c06fe15df18f83c82855d8435e15\n] \n\n[Darcs.Patch.Info: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225195147\n Ignore-this: f50bcf1a170c6c8941c688021e20d1eee24e59b2afe7a5f01488c9c4f2cb92d58aed586f146a0a98\n] \n\n[Darcs.Util.Diff.Patience: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225194009\n Ignore-this: ccfaccc22725d81839f5caf605742eb7f3ef916572fdd7a53bcc7f7fa837ef9d71729e7c71d4503\n] \n\n[Darcs.Patch.Annotate: fix warning about head\nGanesh Sittampalam <ganesh@earth.li>**20240225182503\n Ignore-this: 4c48b8aadee71311e2a01f5b53a678e07f53339d98e843ebc01ebd381163fe0a9d7f3721c2c5dc58\n] \n\n[bump version to 2.19.1\nGanesh Sittampalam <ganesh@earth.li>**20240225175930\n Ignore-this: b8e8df00de306f7de2363d1805c152be15cc5b5ab99a57be8f9db19bb8552d0d25a196eeb2dc20c4\n] \n\n[TAG 2.18.1\nGanesh Sittampalam <ganesh@earth.li>**20240225173219\n Ignore-this: dc3a92eafcab9d4fa9f53b1811d4c99d330615a8c202bff1b77f44d551d21684eee81e96c69be62b\n] \n"
